--- a/eventbackend/pom.xml
+++ b/eventbackend/pom.xml
@@ -47,6 +47,11 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+		    <groupId>org.mapstruct</groupId>
+		    <artifactId>mapstruct</artifactId>
+		    <version>1.4.2.Final</version> 
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
